[gd_scene load_steps=17 format=3 uid="uid://bdnrulx4y1ssd"]

[ext_resource type="Texture2D" uid="uid://dvmt2x8qnbtsr" path="res://graphics/bat_wing_left.png" id="1_gtj6m"]
[ext_resource type="Script" path="res://scripts/bat.gd" id="1_rr4g7"]
[ext_resource type="Script" path="res://scripts/bat_death.gd" id="2_vio3j"]
[ext_resource type="Texture2D" uid="uid://dn7gwrlifsi17" path="res://graphics/bat_wing_right.png" id="2_xh8mj"]
[ext_resource type="Texture2D" uid="uid://dpafdxhv0jv1f" path="res://graphics/bat_head.png" id="3_loug7"]
[ext_resource type="Script" path="res://scripts/coin.gd" id="5_ars81"]
[ext_resource type="Texture2D" uid="uid://48chuq7juon" path="res://graphics/coin.png" id="6_14k7m"]

[sub_resource type="PackedScene" id="PackedScene_0piht"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(1073741833, 1073741832, 59, 58, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Bat Death", "Node2D", "script", "RigidBody2D2", "RigidBody2D", "position", "disable_mode", "collision_layer", "collision_mask", "gravity_scale", "linear_velocity", "BatWingRight", "Sprite2D", "position", "scale", "texture", "CollisionPolygon2D", "CollisionPolygon2D", "polygon", "metadata/_edit_lock_", "RigidBody2D", "RigidBody2D", "position", "disable_mode", "collision_layer", "collision_mask", "gravity_scale", "linear_velocity", "BatWingLeft", "Sprite2D", "position", "scale", "texture", "CollisionPolygon2D", "CollisionPolygon2D", "polygon", "metadata/_edit_lock_", "CPUParticles2D", "CPUParticles2D", "position", "emitting", "amount", "one_shot", "explosiveness", "emission_shape", "emission_sphere_radius", "direction", "spread", "gravity", "initial_velocity_min", "initial_velocity_max", "angular_velocity_max", "scale_amount_max", "color", "Timer", "Timer", "wait_time", "autostart", "_on_timer_timeout", "timeout"),
"node_count": 9,
"node_paths": [NodePath("."), NodePath("./RigidBody2D2"), NodePath("./RigidBody2D2"), NodePath("."), NodePath("./RigidBody2D"), NodePath("./RigidBody2D"), NodePath("."), NodePath("."), NodePath("."), NodePath("Timer")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 1, 2, 0, 0, 1073741824, 0, 4, 3, -1, 6, 5, 1, 6, 2, 7, 3, 8, 4, 9, 5, 10, 6, 0, 1073741825, 0, 12, 11, -1, 3, 13, 7, 14, 8, 15, 9, 0, 1073741826, 0, 17, 16, -1, 2, 18, 10, 19, 11, 0, 1073741827, 0, 21, 20, -1, 6, 22, 12, 23, 13, 24, 14, 25, 15, 26, 16, 27, 17, 0, 1073741828, 0, 29, 28, -1, 3, 30, 18, 31, 19, 32, 20, 0, 1073741829, 0, 34, 33, -1, 2, 35, 21, 36, 22, 0, 1073741830, 0, 38, 37, -1, 15, 39, 23, 40, 24, 41, 25, 42, 26, 43, 27, 44, 28, 45, 29, 46, 30, 47, 31, 48, 32, 49, 33, 50, 34, 51, 35, 52, 36, 53, 37, 0, 1073741831, 0, 55, 54, -1, 2, 56, 38, 57, 39, 0),
"variants": [ExtResource("2_vio3j"), Vector2(-0.13485, 0.0927334), 2, 64, 71, 0.25, Vector2(80, 0), Vector2(8.19363, -0.741478), Vector2(1.3, 1.3), ExtResource("2_xh8mj"), PackedVector2Array(1.80099, -1.15375, 1.80099, 0.461993, 9.02933, 0.603725, 12.8278, -4.30021, 4.8624, -4.32856), true, Vector2(-0.13485, 0.0927334), 2, 64, 71, 0.25, Vector2(-80, 0), Vector2(-8.35298, -1.11388), Vector2(1.3, 1.3), ExtResource("1_gtj6m"), PackedVector2Array(-5.14803, -4.07144, -1.96104, -0.964625, -1.98108, 0.859375, -8.63568, 0.799243, -12.8449, -3.99126), true, Vector2(-0.181221, -5.62487), false, 80, true, 1.0, 1, 13.96, Vector2(1, -1), 180.0, Vector2(0, 400), 15.0, 120.0, 180.0, 3.0, Color(0.537255, 0.635294, 0.313726, 1), 10.0, true],
"version": 3
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vmv6a"]
radius = 6.09007

[sub_resource type="PackedScene" id="PackedScene_4pdum"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Coin", "RigidBody2D", "collision_layer", "collision_mask", "gravity_scale", "can_sleep", "continuous_cd", "script", "CoinSprite", "Sprite2D", "texture", "CollisionShape2D", "CollisionShape2D", "position", "shape"),
"node_count": 3,
"node_paths": [NodePath("."), NodePath(".")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 6, 2, 0, 3, 1, 4, 2, 5, 3, 6, 4, 7, 5, 0, 1073741824, 0, 9, 8, -1, 1, 10, 6, 0, 1073741825, 0, 12, 11, -1, 2, 13, 7, 14, 8, 0),
"variants": [32, 35, 0.4, false, 1, ExtResource("5_ars81"), ExtResource("6_14k7m"), Vector2(-1.1622, -1.19055), SubResource("CircleShape2D_vmv6a")],
"version": 3
}

[sub_resource type="Shader" id="Shader_k0kqr"]
code = "shader_type canvas_item;

void vertex() {
}

void fragment() {
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oolbt"]
shader = SubResource("Shader_k0kqr")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dfxjm"]
radius = 4.2864
height = 28.3292

[sub_resource type="CircleShape2D" id="CircleShape2D_mm7wu"]
radius = 3.89481

[sub_resource type="Animation" id="Animation_l4lqj"]
resource_name = "flying"
length = 0.2
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BatWingLeft:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.167355),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.562171]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BatWingLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.16415e-10, 0.167355),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8.35298, -1.11388), Vector2(-7.33451, 2.86885)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BatWingLeft:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.167355),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.940963, 0.665722)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BatWingRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.167355),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8.19363, -0.741478), Vector2(6.68328, 3.86079)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BatWingRight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167355),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.701792]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BatWingRight:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.167355),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.828086)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7r88"]
_data = {
"flying": SubResource("Animation_l4lqj")
}

[node name="Bat New" type="CharacterBody2D" node_paths=PackedStringArray("line2d")]
position = Vector2(0.00489426, -0.00634766)
scale = Vector2(1.45, 1.45)
collision_layer = 4
collision_mask = 71
script = ExtResource("1_rr4g7")
line2d = NodePath("Line2D")
bat_death = SubResource("PackedScene_0piht")
coin = SubResource("PackedScene_4pdum")

[node name="Hitbox" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
material = SubResource("ShaderMaterial_oolbt")
position = Vector2(0.147744, -0.884486)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dfxjm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.307636, -0.207963)
scale = Vector2(0.705376, 0.732638)
shape = SubResource("CircleShape2D_mm7wu")

[node name="BatWingLeft" type="Sprite2D" parent="."]
position = Vector2(-8.35298, -1.11388)
texture = ExtResource("1_gtj6m")
metadata/_edit_lock_ = true

[node name="BatWingRight" type="Sprite2D" parent="."]
position = Vector2(8.19363, -0.741478)
texture = ExtResource("2_xh8mj")
metadata/_edit_lock_ = true

[node name="BatHead" type="Sprite2D" parent="."]
position = Vector2(-0.0867774, -0.467628)
scale = Vector2(0.61446, 0.556876)
texture = ExtResource("3_loug7")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f7r88")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 3

[node name="Line2D" type="Line2D" parent="."]

[node name="Hit Timer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Hit Timer" to="." method="_on_hit_timer_timeout"]
